tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_struct_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: No field `foo` exists on struct `Bar`
  ┌─ fixtures/compile_errors/invalid_struct_field.fe:8:14
  │
8 │     self.val.foo
  │              ^^^ undefined field


